Fix content spacing at top

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,10 +40,6 @@ h1, h2, h3, h4 {
   color: $dark-purple;
 }
 
-main {
-  padding-top: 70px;
-}
-
 i {
   color: $orange;
 }
